First implementation of scrollbar to avoid overflow

--- a/css/style.css
+++ b/css/style.css
@@ -208,10 +208,7 @@ div.back-arrow{
 
 #options{
 	width:100%;
-	box-sizing: border-box;
-	/*padding: 6px 0;*/
-
-	/*background-color: white; /* #FFF9C9 #FCFCFC rgb(255, 244, 161) #f5f5f5 */
+	overflow-y: auto;
 }
 
 tr.option.highlighted{
